--- a/views/microposts/show.erb
+++ b/views/microposts/show.erb
@@ -1,6 +1,6 @@
 <div class = "one micropost">
-<br><h3><%= @micropost.title %> | <%= @micropost.date_created %></h3><br>
-<p><%= @micropost.post %><br><p>
+<h3><%= @micropost.title %> | <%= @micropost.date_created %></h3><br>
+<p><%= @micropost.post %><p>
 
-<a href="/microposts/<%= @micropost.id %>/edit">Would you like to Edit this Post?</a>
+<a href="/microposts/<%= @micropost.id %>/edit">Would you like to Edit this Post?</a><br><br>
 </div>
