--- a/views/microposts/edit.erb
+++ b/views/microposts/edit.erb
@@ -13,6 +13,10 @@
 	<label for="date_created">Date Created<br>
 		<input type="text" name ="micropost[date_created]" value = "<%= @micropost.date_created%>" >
 	</label><br>
+	
+	<label for ="author_id">Author ID <br>
+		<input type = "text" name ="micropost[author_id]" value = "<%=@micropost.author_id%>">
+
 	<button>SUBMIT</button>
 </form>
 
