--- a/views/tags/edit.erb
+++ b/views/tags/edit.erb
@@ -1,1 +1,6 @@
 <h1> This is where you edit your tag</h1>
+
+<form action = "/tags/<%= @tag.id%>" method = "POST">
+	<input type = "hidden" name= "_method" value = "DELETE">
+	<button>DELETE</button>
+</form>
