--- a/views/authors/new.erb
+++ b/views/authors/new.erb
@@ -1,4 +1,6 @@
 <h1> Put a Form here for new authors!</h1>
+
+<div class = "main">
 <form action = "/authors" method = "POST">
 
 	<label for "name">Name <br>
@@ -19,3 +21,4 @@
 	<button>SUMBIT</button>
 
 </form>
+</div>
