--- a/views/microposts/new.erb
+++ b/views/microposts/new.erb
@@ -1,5 +1,6 @@
 <h3> Add a New Post! </h3>
 
+<div class = "main">
 <form action= "/microposts" method = "POST">
 	<label for="Title">Title<br>
 		<input type="text" name = "micropost[title]" >
@@ -29,4 +30,5 @@
 	</label> 	
 	<button>SUBMIT</button>
 </form>
+</div>
 
