--- a/views/microposts/show.erb
+++ b/views/microposts/show.erb
@@ -1,4 +1,4 @@
-<div class = "one micropost">
+<div class = "main">
 <h3><%= @micropost.title %> | <%= @micropost.date_created %></h3>
 <p><%= @micropost.post %></p><br>
 <%= @micropost.author.name%><br>
