--- a/views/tags/show.erb
+++ b/views/tags/show.erb
@@ -1,3 +1,6 @@
 <h3><%= @tags.value %> </h3>
 
+
+<div class = "main">
 <a href="/tags/<%= @tags.id %>/edit">Would you like to edit this tag?</a>
+</div>
