--- a/views/authors/edit.erb
+++ b/views/authors/edit.erb
@@ -1,18 +1,20 @@
-<h3> Edit Author <%= @author.name %> </h3>
 
+<h3> Edit Author <%= @author.name %> </h3>
+<div class = "main">
 <form action= "/authors/<%= @author.id %>" method = "POST">
 	<input type="hidden" name ="_method" value="PUT">
 	<label for="Name">Name<br>
 		<input type="text" name = "author[name]" value ="<%=@author.name%>" >
 	</label><br>
 	
-	<label for="Post">Post<br>
+	<label for="occupation">Occupation<br>
 		<input type="text" name = "author[occupation]" value = "<%=@author.occupation%>">
 	</label><br>
 	
-	<label for="date_created">Date Created<br>
+	<label for="age">Age<br>
 		<input type="text" name ="author[age]" value = "<%= @author.age%>" >
 	</label><br>
 
 	<button>SUBMIT</button>
 </form>
+</div>
