--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,16 +2,18 @@
 <html lang = "en">
 <head>
 	<meta charset = "UTF-8">
-	<link rel="stylesheet" href = "/style.css"
-	<title>Microblogging!</title>
+	<link rel="stylesheet" href = "/style.css">
+	<title></title>
 </head>
 <body>
+	<div class="top">
 	<h1><a href="/"><img src="http://i.imgur.com/loieGXE.png"></a></h1>
 		<div id= "nav">
 			<a href="/authors">Authors</a>
 			<a href="/microposts">Microposts</a>
 			<a href="/tags">Tags</a>
 		</div>
+	</div>
 		<section id = "main">
 			<%= yield %>
 		</section>
